--- a/0717/style.css
+++ b/0717/style.css
@@ -77,7 +77,7 @@ html, body {
   transform: translateY(-50%);
   left: 40px;
   border-radius: 40px;
-  background-color: rgb(164, 121, 121);
+  /* background-color: rgb(164, 121, 121); */
 }
 
 .listName {
@@ -86,7 +86,9 @@ html, body {
   position: absolute;
   left: 350px;
   top: 40px;
-  background-color: rgb(109, 196, 80);
+  /* background-color: rgb(211, 109, 20); */
+  font-size: 50px;
+  text-align: center;
 }
 
 .listContent{
@@ -95,5 +97,5 @@ html, body {
   position: absolute;
   left: 350px;
   top: 140px;
-  background-color: rgb(72, 89, 182);
+  /* background-color: rgb(72, 89, 182); */
 }
