--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ html, body {
 
 .list {
   height: 300px;
-  border-radius: 40px;
+  border-radius: 20px;
   background-color: #fff;
   margin: 40px;
 }
@@ -75,25 +75,30 @@ html, body {
   height: 250px;
   top: 50%;
   transform: translateY(-50%);
-  left: 40px;
-  border-radius: 40px;
-  background-color: rgb(164, 121, 121);
+  left: 20px;
+  border-radius: 20px;
+  object-fit: cover;
+  /* background-color: rgb(164, 121, 121); */
+  /* object-fit: cover; */
 }
 
 .listName {
   width: 300px;
   height: 80px;
   position: absolute;
-  left: 350px;
+  left: 320px;
   top: 40px;
-  background-color: rgb(109, 196, 80);
+  /* background-color: rgb(109, 196, 80); */
+  font-size: 50px;
+  text-align: center;
 }
 
 .listContent{
   width: 450px;
   height: 120px;
   position: absolute;
-  left: 350px;
+  left: 345px;
   top: 140px;
-  background-color: rgb(72, 89, 182);
+  /* background-color: rgb(72, 89, 182); */
+  font-size: 35px;
 }
