修改字體圖片大小距離.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   /* border: solid 1px black; */
   position: relative;
-  font-family: "微軟正黑體";
+  font-family: 'cwTeXYen', sans-serif;
 }
 
 html, body {
@@ -91,6 +91,7 @@ html, body {
   /* background-color: rgb(109, 196, 80); */
   font-size: 50px;
   text-align: center;
+  color: rgb(145, 145, 145);
 }
 
 .listContent{
@@ -101,4 +102,23 @@ html, body {
   top: 140px;
   /* background-color: rgb(72, 89, 182); */
   font-size: 35px;
+  color: rgb(145, 145, 145);
+}
+
+.contentDetail{
+  width: 95%;
+  left: 50%;
+  transform: translateX(-50%);
+  /* margin: 40px; */
+  position: absolute;
+  top: 200px;
+  border-radius: 20px;
+}
+
+.detail{
+  position: absolute;
+  height: 1700px;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  border-radius: 20px;
 }
