--- a/style.css
+++ b/style.css
@@ -107,18 +107,177 @@ html, body {
 
 .contentDetail{
   width: 95%;
+  /* height: 1700px; */
   left: 50%;
   transform: translateX(-50%);
-  /* margin: 40px; */
   position: absolute;
   top: 200px;
   border-radius: 20px;
+  background-color: #fff;
 }
 
-.detail{
+/* .contentDetail{
   position: absolute;
   height: 1700px;
-  width: 100%;
+  width: 95%;
   background-color: rgb(255, 255, 255);
   border-radius: 20px;
+} */
+
+.contentTitle{
+  height: 100px;
+  width: 700px;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 80px;
+  border-radius: 100px;
+  background-color: #FFD3B4;
 }
+.contentTitleDetail{
+  font-size: 65px;
+  text-align: center;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.contentPurpose{
+  margin-top: 20px;
+  height: 100px;
+  width: 700px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 40px;
+}
+.contentPurposeTitle{
+  height: 50px;
+  /* width: 300px; */
+  display: inline-block;
+  top: 25%;
+  border-radius: 100px;
+  background-color: #D5ECC2;
+  padding: 10px 30px 10px 30px;
+}
+.contentPurposeDetail{
+  height: 50px;
+  left: 10px;
+  display: inline-block;
+  top: 25%;
+}
+
+.contentNumber{
+  margin-top: 20px;
+  height: 100px;
+  width: 700px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 40px;
+}
+
+.contentNumberTitle{
+  height: 50px;
+  /* width: 300px; */
+  display: inline-block;
+  top: 25%;
+  border-radius: 100px;
+  background-color: #D5ECC2;
+  padding: 10px 30px 10px 30px;
+}
+
+.contentNumberDetail{
+  height: 50px;
+  left: 10px;
+  display: inline-block;
+  top: 25%;
+}
+
+
+
+.contentItem{
+  margin-top: 20px;
+  height: 100px;
+  width: 700px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 40px;
+}
+
+.contentItemTitle{
+  height: 50px;
+  /* width: 300px; */
+  display: inline-block;
+  top: 25%;
+  border-radius: 100px;
+  background-color: #D5ECC2;
+  padding: 10px 30px 10px 30px;
+}
+
+.contentItemDetail{
+  height: 50px;
+  left: 10px;
+  display: inline-block;
+  top: 25%;
+}
+
+
+
+.contentRules{
+  margin-top: 40px;
+  /* height: 100px; */
+  width: 700px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 40px;
+}
+
+.contentRulesTitle{
+  /* position: absolute; */
+  height: 50px;
+  /* width: 140px; */
+  /* width: 300px; */
+  display: inline-block;
+  border-radius: 100px;
+  background-color: #D5ECC2;
+  padding: 10px 30px 10px 30px;
+}
+
+.contentRulesDetail{
+  /* position: absolute; */
+  /* height: 100px; */
+  width: 500px;
+  left: 160px;
+  /* display: inline-block; */
+  word-wrap:break-word; 
+  top: -55px;
+}
+
+
+.contentSuggest{
+  margin-top: 20px;
+  /* height: 100px; */
+  width: 700px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 40px;
+}
+
+.contentSuggestTitle{
+  /* position: absolute; */
+  height: 50px;
+  /* width: 140px; */
+  /* width: 300px; */
+  display: inline-block;
+  border-radius: 100px;
+  background-color: #D5ECC2;
+  padding: 10px 30px 10px 30px;
+}
+
+.ccontentSuggestDetail{
+  /* position: absolute; */
+  /* height: 100px; */
+  width: 500px;
+  left: 160px;
+  /* display: inline-block; */
+  word-wrap:break-word; 
+  top: -55px;
+}
+
