--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   /* border: solid 1px black; */
   position: relative;
   font-family: 'cwTeXYen', sans-serif;
+  -webkit-user-select: none; 
 }
 
 html, body {
@@ -107,7 +108,6 @@ html, body {
 
 .contentDetail{
   width: 95%;
-  /* height: 1700px; */
   left: 50%;
   transform: translateX(-50%);
   position: absolute;
@@ -271,7 +271,7 @@ html, body {
   padding: 10px 30px 10px 30px;
 }
 
-.ccontentSuggestDetail{
+.contentSuggestDetail{
   /* position: absolute; */
   /* height: 100px; */
   width: 500px;
@@ -281,3 +281,74 @@ html, body {
   top: -55px;
 }
 
+.contentVideoDetail{
+  width: 600px;
+  height: 400px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.video-container iframe, .video-container object, .video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.optionContent{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 160px;
+  background-color: #7D7C7C;
+  opacity: 90%;
+}
+
+.bt{
+  width: 650px;
+  /* height: 150px; */
+  margin: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.btTitle{
+  width: 200px;
+  height: 150px;
+  /* position: absolute; */
+  left: 0px;
+  font-size: 100px;
+  color: white;
+}
+.btContent{
+  width: 350px;
+  height: 140px;
+  position: absolute;
+  left: 240px;
+  top: 0px;
+  border-radius: 100px;
+  /* color: #353535; */
+  background-color: #FFD3B4;
+}
+
+.btCircle{
+  width: 130px;
+  height: 130px;
+  border-radius: 100px;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 10px;
+  background-color: #FFAAA7;
+}
+
+.btStatus{
+  width: 140px;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  right: 10px;
+  font-size: 100px;
+  text-align: center;
+  color: #5B5B5B;
+}
