開關做好，差轉場動畫.

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   position: relative;
   font-family: 'cwTeXYen', sans-serif;
   -webkit-user-select: none; 
+  user-select: none;
 }
 
 html, body {
