修改固定介面，但叉叉無法被偵測.

--- a/copy/style.css
+++ b/copy/style.css
@@ -21,11 +21,6 @@ html, body {
 .nav {
   height: 160px;
   background-color: #FFAAA7;
-  position: fixed;
-  top: 0px;
-  z-index: 2;
-  width: 100%;
-  height: 160px;
 }
 
 .title {
@@ -112,28 +107,19 @@ html, body {
   color: rgb(145, 145, 145);
 }
 
-.content{
-  /* height: 160px; */
-  margin-top: 180px;
-}
-
-
 .contentDetail{
   position: fixed;
   /* width: 300px;
   height: 300px; */
   /* width: 95%; */
-  height: 1200px;
+  /* height: 2500px; */
   width: 100%;
   /* left: 50%;
   transform: translateX(-50%); */
-  top: 160px;
+  top: 200px;
   z-index:1; 
   /* border-radius: 20px; */
   background-color: #fff;
-  overflow: scroll;
-  /* padding-bottom: 200px; */
-  z-index: 1;
 }
 
 /* .contentDetail{
@@ -318,23 +304,20 @@ html, body {
 
 .del_btn{
   /* display: inline-block; */
-  width: 120px;
-  height: 120px;
+  width: 100px;
+  height: 200px;
   font-size: 80px;
-  /* border: solid 3px black; */
+  border: solid 3px black;
   border-radius: 100px;
   text-align: center;
-  line-height: 120px;
+  line-height: 100px;
   
-  /* position: fixed; */
-  left: 50%;
+  /* position: absolute; */
+  /* left: 50%;
   transform: translateX(-50%);
-  z-index: -1;
-  top: 30px;
-  bottom: 60px;
-  /* padding-bottom: 60px; */
-  margin-bottom: 60px;
-  background-color: rgba(149, 149, 149, 0.5);
+  margin-top: 30px;
+  margin-bottom: 50px; */
+  /* z-index: 1; */
 }
 
 
