--- a/style.css
+++ b/style.css
@@ -337,6 +337,10 @@ html, body {
   /* padding-bottom: 60px; */
   margin-bottom: 60px;
   background-color: rgba(149, 149, 149, 0.5);
+
+  outline:none;
+
+
 }
 
 
@@ -344,11 +348,12 @@ html, body {
   width: 100%;
   height: 100%;
   position: absolute;
-  top: 160px;
+  top: 0px;
   background-color: #7D7C7C;
   opacity: 90%;
   transition-duration: 0.5s;
-  display: none;
+  /* display: none; */
+  z-index: 1;
 }
 
 .bt{
