--- a/0801/style.css
+++ b/0801/style.css
@@ -345,15 +345,14 @@ html, body {
 
 
 .optionContent{
-  position: fixed;
   width: 100%;
-  height: 80%;
-  /* position: absolute; */
-  top: 160px;
+  height: 100%;
+  position: absolute;
+  top: -20px;
   background-color: #7D7C7C;
   opacity: 90%;
   transition-duration: 0.5s;
-  display: none;
+  /* display: none; */
   z-index: 1;
 }
 
